Blue-Green-Deployment/Ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
spec:
  rules:
  - http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: my-app-v1
            port:
              number: 80
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: my-app-v2
            port:
              number: 80
  defaultBackend:
    service:
      name: my-app-v1
      port:
        number: 80
